# plexdl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint  Dockerfile  LICENSE  Makefile  Pipfile  README.md  hooks.mk  pipenv.mk  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: create-release-from-tag.yaml  pre-commit-action.yaml  stale-issue-closer.yaml
plexdl/: __init__.py  cli.py  plexdl.py
tests/: __init__.py  example_test.py
