[tool.poetry]
name = "plexdl"
version = "0.4.3"
description = ""
authors = ["Daniel Hoherd <daniel.hoherd@gmail.com>"]
license = "MIT License"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
plexdl = 'plexdl.cli:app'

[tool.poetry.dependencies]
humanfriendly = "^10.0"
importlib-metadata = "^7.2.1"
pendulum = "^3.0.0"
PlexAPI = "^4.15.14"
python = "^3.11"
requests = "^2.32.3"
typer = "^0.12.3"
humanize = "^4.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
pytest = "^8.2.2"
tox = "^4.15.1"
pdbr = "^0.8.8"

[tool.black]
line-length = 132

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39
skipsdist = True

[testenv]
whitelist_externals = poetry
#skip_install = true
deps = pre-commit
commands =
    pre-commit install -f --install-hooks
    pre-commit run --all-files
    poetry install -vvv
    poetry run pytest tests/

[pep8]
ignore = E265
"""
[build-system]
requires = ["poetry>=1.5.1"]
build-backend = "poetry.masonry.api"

[tool.ruff.lint]
fixable = ["ALL"]
select = ["C", "E", "F", "Q", "S"]
ignore = ["E501", "S311", "S603", "S608", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
# TODO: reduce this
max-complexity = 11
