[tool.poetry]
name = "plexdl"
version = "0.4.3"
description = ""
authors = ["Daniel Hoherd <daniel.hoherd@gmail.com>"]
license = "MIT License"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
plexdl = 'plexdl.cli:app'

[tool.poetry.dependencies]
python = "^3.11"
humanfriendly = "^10.0"
importlib-metadata = "^8.5.0"
pendulum = "^3.0.0"
PlexAPI = "^4.16.0"
requests = "^2.32.3"
typer = "^0.13.1"
humanize = "^4.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry>=1.8.0"]
build-backend = "poetry.masonry.api"

# https://docs.astral.sh/ruff/settings/
[tool.ruff]
line-length = 132
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]

# https://docs.astral.sh/ruff/rules/
select = [
  "ASYNC",
  "ARG",
  "BLE",
  "C",
  "E",
  "F",
  "FLY",
  "FURB",
  "I",
  "N",
  "PERF",
  "PGH",
  "Q",
  "R",
  "RUF",
  "S",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "E501",
  "S311",
  "S603",
  "S607",
  "S608",
]


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
# TODO: reduce this
max-complexity = 11
